src/components/AboutUs/carouselstyles.css
@import '~slick-carousel/slick/slick.css';
@import '~slick-carousel/slick/slick-theme.css';
.slider {
  position: absolute;
  width: 100%;
  height: 400px;
}
.header {
  margin: 50px auto;
  text-align: center;
  font-size: 80px;
}
.slide,
.slide img {
  width: 580px;
  border-radius: 20px;
  aspect-ratio: 4/3;
}
.slide {
  transform: scale(0.7);
  transition: 0.5s;
  border-radius: 12px;
}
.slide-active {
  filter: blur(0);
  opacity: 1;
  transform: scale(1.1);
  border-radius: 20px;
}
.container {
  margin-top: 20px;
}
.slick-prev:before,
.slick-next:before {
  display: none;
}
@media screen and (max-width: 768px) {
  .header {
    font-size: 7vw;
  }
  .slide,
  .slide img {
    width: 288px;
    height: 180px;
    border-radius: 5px;
  }
  .arrow {
    font-size: 50px;
    padding: 5px 15px;
    display: flex;
    position: absolute;
    top: 50%;
    color: white;
    width: 50px;
    z-index: 100;
    cursor: pointer;
  }
  .custom-prev-arrow {
    left: 0;
    justify-content: flex-start;
  }
  .custom-next-arrow {
    right: 0;
    justify-content: flex-end;
  }
}
@media screen and (max-width: 996px) {
  .slide,
  .slide img {
    height: 280px;
    border-radius: 5px;
  }
}
@media screen and (max-width: 554px) {
  .slide,
  .slide img {
    height: 200px;
    border-radius: 5px;
  }
}
@media screen and (max-width: 491px) {
  .slide,
  .slide img {
    height: 280px;
    border-radius: 5px;
    width: 300px;
    position: relative;
    left: 5%;
  }
}
/* .slick-slide {
  margin: 0px 4px;
} */

